# foundry-compilers-aletheia

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: cargo.yml
examples/: adhoc.rs  adhoc_basic.rs  config_foundry_basic.rs  config_foundry_soldeer_basic.rs  config_soldeer_basic.rs
foundry-rs-config/alloy-chains/: .cargo-checksum.json  Cargo.toml
foundry-rs-config/alloy-eip7702/: .cargo-checksum.json
foundry-rs-config/alloy-json-abi/: .cargo-checksum.json  Cargo.toml
foundry-rs-config/alloy-primitives/: .cargo-checksum.json  Cargo.toml
foundry-rs-config/alloy-sol-type-parser/: .cargo-checksum.json  Cargo.toml
foundry-rs-config/bon/: .cargo-checksum.json  Cargo.toml
foundry-rs-config/bon-macros/: .cargo-checksum.json  Cargo.toml
foundry-rs-config/foundry-block-explorers/: .cargo-checksum.json  Cargo.toml
foundry-rs-config/foundry-compilers/: .cargo-checksum.json  Cargo.toml
foundry-rs-config/foundry-compilers-artifacts/: .cargo-checksum.json  Cargo.toml
foundry-rs-config/foundry-compilers-artifacts-solc/: .cargo-checksum.json  Cargo.toml
foundry-rs-config/foundry-compilers-artifacts-vyper/: .cargo-checksum.json  Cargo.toml
foundry-rs-config/foundry-compilers-core/: .cargo-checksum.json  Cargo.toml
foundry-rs-config/foundry-config/: .cargo-checksum.json  Cargo.toml
foundry-rs-config/linux-raw-sys/: .cargo-checksum.json
foundry-rs-config/mesc/: .cargo-checksum.json  Cargo.toml
foundry-rs-config/normalize-path/: .cargo-checksum.json
foundry-rs-config/once_map/: .cargo-checksum.json  Cargo.toml
foundry-rs-config/parity-scale-codec/: Cargo.toml  (+1 more)
src/: lib.rs  project_config.rs
test-compile/: foundry-basic-in.json  foundry-basic-out-in.json  foundry-basic-out.json
tests/: ast_tests.rs  config.rs  config_remappings.rs  dep_tests.rs  deps_tests.rs  library_tests.rs  pre_ast_tests.rs  project_config.rs  project_config_tests.rs
(+87 files in other folders)
